Potential fix for bug superfish menu not showing

--- a/themes/hapoos/sass/forms.scss
+++ b/themes/hapoos/sass/forms.scss
@@ -150,3 +150,19 @@ form {
 td.menu-disabled {
   background: #ccc;
 }
+
+
+.btn-red, 
+a .btn-red,
+a:link .btn-red,
+a:hover .btn-red {
+  @include sassy-button("flat", 4px, 1em, #d2232a);
+  color: white !important;
+}
+.btn-blue, 
+a .btn-blue,
+a:link .btn-blue,
+a:hover .btn-blue {
+  @include sassy-button("flat", 4px, 1em, #3b5a9b);
+  color: white !important;
+}
