--- a/themes/hapoos/sass/pages.scss
+++ b/themes/hapoos/sass/pages.scss
@@ -300,3 +300,10 @@ div.read-more a {
   .panels-flexible-region-inside-last {
     padding-right: 1em;
   }
+
+  .panels-row-main-menu {
+    .inside {
+      overflow-x: visible !important;
+      overflow-y: visible !important;
+    }
+  }
